--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,71 @@
 *,
 *::before,
 *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    overflow-x: hidden;
-    font-family: "Montserrat", 'Nunito Sans', Inter, sans-serif;
+  overflow-x: hidden;
+  font-family: "Montserrat", "Nunito Sans", Inter, sans-serif;
+}
+
+.banner {
+  position: relative;
+
+  &__header {
+  }
+  .banner__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 18rem;
+  }
+  &__contact {
+    display: flex;
+    .banner-inst {
+      margin-right: 0.7rem;
+      margin-top: -4px;
+    }
+    .banner-tel {
+      font-size: 0.8rem;
+    }
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
+  }
+  &__subtitle {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+
+    color: #000000;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+
+    color: #2d9624;
+  }
+  .banner__img {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -100;
+  }
+}
+.banner-block {
+  padding-top: 3rem;
+}
+.banner-btn {
+}
+
+.btn-order {
+}
+.whatsapp-btn {
 }
