--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,9 @@ body {
 .banner .banner__img {
   position: absolute;
   top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   z-index: -100;
 }
