--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,9 @@ body {
   .banner__img {
     position: absolute;
     top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     z-index: -100;
   }
