--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,55 @@ a {
           transform: scale(1.2);
 }
 
+.pulse {
+  position: fixed;
+  top: 80%;
+  right: 10%;
+  z-index: 1000;
+  border-radius: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.pulse:before,
+.pulse:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(71, 221, 0, 0.4);
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0.7;
+}
+
+.pulse:before {
+  -webkit-animation: pulse 2s ease-out infinite;
+          animation: pulse 2s ease-out infinite;
+}
+
+.pulse:after {
+  -webkit-animation: pulse 2s 1s ease-out infinite;
+          animation: pulse 2s 1s ease-out infinite;
+}
+
+@-webkit-keyframes pulse {
+  100% {
+    -webkit-transform: scale(2.2);
+            transform: scale(2.2);
+    opacity: 0;
+  }
+}
+
+@keyframes pulse {
+  100% {
+    -webkit-transform: scale(2.2);
+            transform: scale(2.2);
+    opacity: 0;
+  }
+}
+
 .about-us {
   margin-bottom: 6rem;
 }
@@ -238,7 +287,7 @@ a {
   margin: 0 auto 2.5rem;
 }
 
-.about-us-subtitle {
+.about-us-subtitlef {
   margin-bottom: 1rem;
 }
 
@@ -402,7 +451,10 @@ a {
 
 .result .result-card {
   padding: 30px 10px;
+  max-width: 400px;
+  margin: 0 auto;
   margin-bottom: 2.5rem;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: linear-gradient(146.42deg, rgba(0, 0, 0, 0.5) -36.31%, rgba(0, 0, 0, 0) 136.19%);
   -webkit-backdrop-filter: blur(3px);
@@ -482,6 +534,12 @@ a {
   line-height: 11px;
   /* identical to box height */
   color: #ffffff;
+}
+
+.res-doc {
+  width: 100%;
+  max-width: 400px;
+  margin-inline: auto;
 }
 
 .res-doc-desc {
@@ -602,6 +660,9 @@ a {
 
 .footer form {
   margin-bottom: 4rem;
+  max-width: 400px;
+  width: 100%;
+  margin-inline: auto;
 }
 
 .footer .form-container .contai {
@@ -725,5 +786,43 @@ a {
 .footer .footer-socials img {
   margin-bottom: 5rem;
   width: 35px;
+}
+
+@media screen and (min-width: 345px) {
+  .banner .banner__top {
+    margin-bottom: 22rem;
+  }
+  .banner .banner__title {
+    width: 300px;
+    margin-inline: auto;
+  }
+}
+
+@media screen and (min-width: 425px) {
+  .banner .banner__top {
+    margin-bottom: 28rem;
+  }
+  .footer .footer-title,
+  .footer .footer-subtitle {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .banner .banner__top {
+    margin-bottom: 33rem;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .banner .banner__top {
+    margin-bottom: 42rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .banner .banner__top {
+    margin-bottom: 49rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
